JVM tuning: use v9, parallel gc, memory tunings